force-app/main/default/objects/Payment__c/fields/Month_Paid__c.field-meta.xml
<CustomField>
    <fullName>Month_Paid__c</fullName>
    <label>Month Paid</label>
    <length>50</length>
    <type>Text</type>
</CustomField>