force-app/main/default/objects/Payment__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <label>Transaction ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>