force-app/main/default/objects/Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Child__c</columns>
    <columns>Parent__c</columns>
    <columns>Plan__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Payment_Fee__c</columns>
    <columns>Late_Fee__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>Payment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>