force-app/main/default/objects/Payment__c/listViews/Pending_Payments.listView-meta.xml
<ListView>
    <fullName>Pending_Payments</fullName>
    <columns>NAME</columns>
    <columns>Child__c</columns>
    <columns>Parent__c</columns>
    <columns>Payment_Fee__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Payment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Payments</label>
</ListView>